use-case-b-kfp-from-user-pods-access/metadata-envoy-hr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/component: ml-pipeline
    app.kubernetes.io/name: kubeflow-pipelines
    application-crd-id: kubeflow-pipelines
  name: metadata-envoy
  namespace: kubeflow
spec:
  parentRefs:
  - name: ambient-ingressgateway   # Gateway name, must exist in same or another namespace
    namespace: istio-system        # If gateway is in another namespace, must specify this
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /ml_metadata.MetadataStoreService
    backendRefs:
    - name: metadata-envoy-service         # must match a service in kubeflow namespace
      port: 9090
