use-case-b-kfp-from-user-pods-access/admission-webhook-ap-allow-all.yaml
# k8s sends a request to webhook before persisting changes
# in etcd to confirm if the object should be changed
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  labels:
    application-crd-id: kubeflow-pipelines
  name: admission-webhook-l4-allow-all
  namespace: kubeflow
spec:
  action: ALLOW
  rules:
  - {}
  selector:
    matchLabels:
      app: poddefaults
