use-case-b-kfp-from-user-pods-access/kfp-profile-controller-ap-metacontroller.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  labels:
    application-crd-id: kubeflow-pipelines
  name: kfp-profile-controller-l4-metacontroller
  namespace: kubeflow
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/kubeflow/sa/meta-controller-service
  selector:
    matchLabels:
      app: kubeflow-pipelines-profile-controller
